test/trivial/diten/undefinedVarInClass.good
undefinedVarInClass.chpl:2 error: i'undefined_var' undeclared
