test/trivial/diten/undefinedVarInClass.chpl
class C {
  var a: int = undefined_var;
  var b: int;
}

def main {
  var c = new C();
  writeln(c);
}
